# crime_prediction

./: .gitattributes  .gitignore  .pylintrc  README.md  main.py  pyproject.toml  requirements.txt  run_app.py  run_gui.py
models/: best_model.pkl  model_info.json
scripts/: validate_report_consistency.py
src/: constants.py  main.py  run_excel_gui.py  run_gui.py  test_dummy_generator.py  test_excel_upload.py  test_pipeline.py
src/ai/: evaluator.py  experiments.py  predict.py  preprocessing.py  train.py
src/ai/linear/: linear_model.py
src/ai/random_forest/: decision_tree.py  random_forest.py
src/ai/xgboost/: loss.py  tree.py  xgb_model.py
src/gui/: crime_generator_window.py  excel_window.py  widgets.py
src/model/: excel_model.py
src/services/: ai_service.py  analysis_data_service.py  crime_service.py  dummy_generator.py  excel_pipeline.py  excel_service.py  statistics_service.py
src/view/: crime_view.py  excel_view.py
src/viewmodel/: crime_viewmodel.py  excel_viewmodel.py
tests/: _path_setup.py  conftest.py  test_ai_models.py  test_analysis_data_service.py  test_dummy_generator.py  test_excel_pipeline.py  test_excel_upload.py  test_excel_window_helpers.py  test_file_prediction_flow.py  test_model_security.py  test_pipeline.py  test_predict.py  test_predict_file.py  test_preprocessing.py  test_recursive_prediction.py  test_statistics_service.py  test_viewmodel_architecture.py  test_walk_forward_validation.py
