[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crime-prediction"
version = "0.1.0"
description = "Crime data preprocessing, model training, prediction, and Tkinter GUI tools."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pylint>=3.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not integration"]
markers = [
    "integration: requires a trained local model or real data files",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
